--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.15.2",
+    "material-icons": "^1.13.7",
     "pinia": "^2.1.3",
     "vue": "^3.2.47"
   },
